--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ pep8ignore =
 flakes-ignore =
     extenum/__init__.py UnusedImport
     tests/test_constant_specific.py RedefinedWhileUnused
+    tests/test_implicit_enum.py UndefinedName
