--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,5 @@
 pep8ignore =
 flakes-ignore =
     extenum/__init__.py UnusedImport
-    tests/test_constant_specific.py RedefinedWhileUnused
+    tests/test_constant_specific.py RedefinedWhileUnused UndefinedName
     tests/test_implicit_enum.py UndefinedName
