--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   - TOXENV=pypy3
 
 install:
-  - travis_retry pip install tox
+  - travis_retry pip install --use-mirrors tox
 
 script:
   - travis_retry tox
