--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist = py32, py33, py34, pypy3
 indexserver =
-    pypi = http://pypi.python.org/simple
+    pypi = https://pypi.python.org/simple
 
 [testenv]
 deps =
