--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,6 @@
 pep8ignore =
 flakes-ignore =
     extenum/__init__.py UnusedImport
+    tests/test_common_behavior.py ImportStarUsage
     tests/test_constant_specific.py RedefinedWhileUnused UndefinedName
     tests/test_implicit_enum.py UndefinedName
