--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
-envlist = py32, py33, py34, pypy3
-indexserver =
-    pypi = https://pypi.python.org/simple
+envlist = py34, py35, py36, pypy3.5
 
 [testenv]
 deps =
-    :pypi:pytest
-    :pypi:pytest-pep8
-    :pypi:pytest-flakes
+    pytest
+    pytest-pep8
+    pytest-flakes
 
-commands = py.test -v --pep8 --flakes --clearcache extenum tests
+commands = py.test -v --pep8 --flakes extenum tests
