use pytest-flake8 for testing

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
-include MANIFEST.in
-include LICENSE
-include *.rst
+include *.ini
 include *.md
+include *.rst
+include LICENSE
+include MANIFEST.in
 recursive-include extenum *.py
 recursive-include tests *.py
