--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,5 @@
 [pytest]
-pep8ignore =
-flakes-ignore =
-    extenum/__init__.py UnusedImport
-    tests/test_common_behavior.py ImportStarUsage
-    tests/test_constant_specific.py RedefinedWhileUnused UndefinedName
-    tests/test_implicit_enum.py UndefinedName
+flake8-ignore =
+    extenum/__init__.py F401
+    tests/test_constant_specific.py F811 F821
+    tests/test_implicit_enum.py F821
