--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py34, py35, py36, pypy3.5
+envlist = py36, py37, py38, py39, pypy3.6
 
 [testenv]
 deps =
     pytest
-    pytest-pep8
-    pytest-flakes
+    pytest-flake8
 
-commands = py.test -v --pep8 --flakes extenum tests
+commands = py.test -v --flake8 extenum tests
